2007-01-31  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c (cardInfo_t): Make dev be 'struct pci_dev *' even for
	kernels < 2.6.0.
	(findCardType): Assign to cards[n].dev the dev variable instead of
	devfn. Fix macro to use devfn instead.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c (my_remap_page_range): Define as remap_pfn_range for
	linux 2.6.10 or higher.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	Use the "new" kernel level exception handling for memory accesses
	introduced in linux 2.1.8, which obsoletes verify_aread.

	* 3dfx_device.c (doQueryFetch): Remove verify_area and check for
	copy_to_user return values.
	(doPIORead): Likewise.
	(doQueryUpdate): Remove verify_area and check for copy_from_user
	return values.
	(doQuery): Likewise.
	(doPIOWrite): Likewise.
	(doPIO): Likewise.
	(verify_area) [DEBUG]: Remove function.
	(a_last_dummy_function) [DEBUG]: Likewise.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c (doQueryFetch): Assign desc->device to i, and use it
	when referencing cards.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c (setmtrr_3dfx): Make it static.
	(resetmtrr_3dfx): Likewise.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c (id_table_3dfx): Move near the corresponding ifdef
	for older kernels.
	(findCards): Likewise.
	(driver_3dfx): Forward declare.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	Rename functions obsoleted in linux 2.1.93.

	* 3dfx_device.c (pcibios_read_config_byte): Rename to ...
	(pci_read_config_byte): ... this and remove first argument.
	(pcibios_read_config_word): Rename to ...
	(pci_read_config_word): ... this and remove first argument.
	(pcibios_read_config_dword): Rename to ...
	(pci_read_config_dword): ... this and remove first argument.
	(pcibios_write_config_dword): Rename to ...
	(pci_write_config_dword): ... this and remove first argument.

2006-12-03  Guillem Jover  <guillem@hadrons.org>
