@@ -1,3 +1,10 @@
+2007-02-06  Guillem Jover  <guillem@hadrons.org>
+
+	* Makefile (.PHONY): Add clean_kbuild. Rename modules-legacy,
+	modules-kbuild, install-legacy, install-kbuild and clean-legacy to
+	modules_legacy, modules_kbuild, install_legacy, install_kbuild
+	and clean_legacy.
+
 2007-01-31  Guillem Jover  <guillem@hadrons.org>
 
 	* 3dfx_device.c (cardInfo_t): Make dev be 'struct pci_dev *' even for
